@@ -12,80 +12,84 @@ import uz.nt.uzumproject.service.validator.AppStatusMessages;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
+import static uz.nt.uzumproject.service.validator.AppStatusMessages.*;
+import static uz.nt.uzumproject.service.validator.AppStatusCodes.*;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
-    public final ProductRepository productRepository;
+    public final ProductRepository repository;
     private final ProductMapper mapper;
-    public ResponseDto<ProductDto> post(ProductDto productDto){
+
+    public ResponseDto<ProductDto> add(ProductDto productDto) {
         productDto.setId(null);
-        Product product = productRepository.save(mapper.toEntity(productDto));
+        Product product = repository.save(mapper.toEntity(productDto));
         return ResponseDto.<ProductDto>builder()
-                .message(AppStatusMessages.OK)
-                .code(AppStatusCodes.OK_CODE)
+                .message(OK)
+                .code(OK_CODE)
                 .success(true)
                 .data(mapper.toDto(product))
                 .build();
     }
 
 
-
-    public ResponseDto<ProductDto> patch(ProductDto productDto){
-        if(productDto.getId() == null) {
+    public ResponseDto<ProductDto> edit(ProductDto productDto) {
+        if (productDto.getId() == null) {
             return ResponseDto.<ProductDto>builder()
                     .message(AppStatusMessages.VALIDATION_ERROR)
                     .code(AppStatusCodes.VALIDATION_ERROR_CODE)
                     .data(productDto)
                     .build();
         }
-        Optional<Product> optional = productRepository.findFirstById(productDto.getId());
-        if(optional.isEmpty()){
+        Optional<Product> optional = repository.findFirstById(productDto.getId());
+        if (optional.isEmpty()) {
             return ResponseDto.<ProductDto>builder()
                     .message(AppStatusMessages.NOT_FOUND)
                     .code(AppStatusCodes.NOT_FOUND_CODE)
                     .data(productDto)
                     .build();
-        } else if (productDto.getAmount()<0){
-        return ResponseDto.<ProductDto>builder()
-                .message(AppStatusMessages.VALIDATION_ERROR)
-                .code(AppStatusCodes.VALIDATION_ERROR_CODE)
-                .data(productDto)
-                .build();
+        } else if (productDto.getAmount() < 0) {
+            return ResponseDto.<ProductDto>builder()
+                    .message(AppStatusMessages.VALIDATION_ERROR)
+                    .code(AppStatusCodes.VALIDATION_ERROR_CODE)
+                    .data(productDto)
+                    .build();
         }
 
         ProductDto product = new ProductDto();
 
-            product.setId(optional.get().getId());
+        product.setId(optional.get().getId());
 
-            if(productDto.getName() != null){
-                product.setName(product.getName());
-            }
-        if(productDto.getPrice() != null){
+        if (productDto.getName() != null) {
+            product.setName(product.getName());
+        }
+        if (productDto.getPrice() != null) {
             product.setPrice(product.getPrice());
         }
-        if(productDto.getAmount() != null){
+        if (productDto.getAmount() != null) {
             product.setAmount(product.getAmount());
         }
-        if(productDto.getDescription() != null){
+        if (productDto.getDescription() != null) {
             product.setDescription(product.getDescription());
         }
-        if(productDto.getImageUrl() != null){
+        if (productDto.getImageUrl() != null) {
             product.setImageUrl(product.getImageUrl());
         }
-        if((productDto.getAmount() != null && productDto.getAmount()>0) || product.getAmount()>0){
+        if ((productDto.getAmount() != null && productDto.getAmount() > 0) || product.getAmount() > 0) {
             product.setIsAvailable(true);
         }
 
-        try{
+        try {
 
             return ResponseDto.<ProductDto>builder()
                     .success(true)
-                    .code(AppStatusCodes.OK_CODE)
-                    .message(AppStatusMessages.OK)
-                    .data(mapper.toDto(productRepository.save(mapper.toEntity(productDto))))
+                    .code(OK_CODE)
+                    .message(OK)
+                    .data(mapper.toDto(repository.save(mapper.toEntity(productDto))))
                     .build();
-        }catch (Exception e){
+        } catch (Exception e) {
             return ResponseDto.<ProductDto>builder()
                     .code(AppStatusCodes.DATABASE_ERROR_CODE)
                     .message(AppStatusMessages.DATABASE_ERROR)
@@ -94,13 +98,22 @@ public class ProductService {
     }
 
 
-
-    public ResponseDto<List<ProductDto>> get(){
+    public ResponseDto<List<ProductDto>> get() {
         return ResponseDto.<List<ProductDto>>builder()
                 .success(true)
-                .code(AppStatusCodes.OK_CODE)
-                .message(AppStatusMessages.OK)
-                .data(productRepository.findAll().stream().map(mapper::toDto).toList())
+                .code(OK_CODE)
+                .message(OK)
+                .data(repository.findByIsAvailable(true).stream().map(mapper::toDto).toList())
+                .build();
+    }
+
+    public ResponseDto<List<ProductDto>> getByCategoryId(Integer id) {
+        List<Product> products = repository.findByCategoryId(id);
+        return ResponseDto.<List<ProductDto>>builder()
+                .code(products.size() == 0 ? NOT_FOUND_CODE : OK_CODE)
+                .message(products.size() == 0 ? NOT_FOUND : OK)
+                .success(products.size() > 0)
+                .data(products.stream().map(mapper::toDto).collect(Collectors.toList()))
                 .build();
     }
 }
